add channel home, videos and shorts - v.0.0.2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,20 @@
     @apply flex items-center justify-center;
   }
 }
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .slider-container {
+    display: flex;
+    transition: transform 0.3s ease-in-out;
+  }
+}
