Resolve url and preparing shorts page - v.0.0.7

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,4 +33,19 @@
   .position-unset {
     position: unset !important;
   }
+
+  .snap-scrollbar-container {
+    position: relative;
+    overflow-y: auto;
+    overscroll-behavior-y: contain;
+    scroll-snap-type: y mandatory;
+    height: calc(100vh - 55px);
+    width: 100%;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .snap-scrollbar-container::-webkit-scrollbar {
+    display: none;
+  }
 }
